Correct width and alignment in about section
Fix CSS issues in the about section.

--- a/style.css
+++ b/style.css
@@ -160,8 +160,7 @@ ul li {
    ABOUT PAGE STYLING
 ========================= */
 .about {
-  width: 100;
-  align-items: flex-start;
+
 }
 
 .about .avatar {
